update security user

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -152,7 +152,7 @@
                                    "showClass": "bi-eye",
                                    "classChangeTarget": ".js-toggle-password-show-icon-1"
                                  }'>
-                          <a class="js-toggle-password-target-1 input-group-append input-group-text" href="javascript:;" (click)="diplayPassword()">
+                          <a class="js-toggle-password-target-1 input-group-append input-group-text" href="javascript:" (click)="displayPassword()">
                             <i class="js-toggle-password-show-icon-1 bi-eye"></i>
                           </a>
                           <div *ngIf="submitted && registerForm.get('password')?.invalid" class="text-danger">
@@ -176,7 +176,7 @@
                                    "showClass": "bi-eye",
                                    "classChangeTarget": ".js-toggle-password-show-icon-2"
                                  }'>
-                          <a class="js-toggle-password-target-2 input-group-append input-group-text" href="javascript:;" (click)="diplayConfirmPassword()">
+                          <a class="js-toggle-password-target-2 input-group-append input-group-text" href="javascript:" (click)="displayConfirmPassword()">
                             <i class="js-toggle-password-show-icon-2 bi-eye"></i>
                           </a>
                           <div *ngIf="submitted && registerForm.get('confirmPassword')?.invalid" class="text-danger">
