--- a/src/app/components/admin-administration/users/users.component.html
+++ b/src/app/components/admin-administration/users/users.component.html
@@ -22,8 +22,8 @@
           <div class="col-sm-2">
             <div class="form-group mt-4">
               <label for="civility">Civilité</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['civility'].errors}" type="text" class="form-control" id="civility" name="civility" formControlName="civility" required>
-              <div *ngIf="submitted && userForm.controls['civility'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('civility')?.invalid}" type="text" class="form-control" id="civility" name="civility" formControlName="civility" required>
+              <div *ngIf="submitted && userForm.get('civility')?.errors?.['required']" class="text-danger">
                 La civilité est obligatoire.
               </div>
             </div>
@@ -32,8 +32,8 @@
           <div class="col-sm-5">
             <div class="form-group mt-4">
               <label for="userFirstname">Prénom</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['userFirstname'].errors}" type="text" class="form-control" id="userFirstname" name="userFirstname" formControlName="userFirstname" required>
-              <div *ngIf="submitted && userForm.controls['userFirstname'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('firstName')?.invalid}" type="text" class="form-control" id="userFirstname" name="userFirstname" formControlName="userFirstname" required>
+              <div *ngIf="submitted && userForm.get('firstName')?.errors?.['required']" class="text-danger">
                 Le prénom est obligatoire.
               </div>
             </div>
@@ -42,8 +42,8 @@
           <div class="col-sm-5">
             <div class="form-group mt-4">
               <label for="userLastname">Nom</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['userLastname'].errors}" type="text" class="form-control" id="userLastname" name="userLastname" formControlName="userLastname" required>
-              <div *ngIf="submitted && userForm.controls['userLastname'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('lastName')?.invalid}" type="text" class="form-control" id="userLastname" name="userLastname" formControlName="userLastname" required>
+              <div *ngIf="submitted && userForm.get('lastName')?.errors?.['required']" class="text-danger">
                 Le nom est obligatoire.
               </div>
             </div>
@@ -54,8 +54,8 @@
           <div class="col-sm-6">
             <div class="form-group mt-4">
               <label for="email">Email</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['email'].errors}" type="email" class="form-control" id="email" name="email" formControlName="email" required>
-              <div *ngIf="submitted && userForm.controls['email'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('email')?.invalid}" type="email" class="form-control" id="email" name="email" formControlName="email" required>
+              <div *ngIf="submitted && userForm.get('email')?.errors?.['required']" class="text-danger">
                 L'email est obligatoire.
               </div>
             </div>
@@ -66,8 +66,8 @@
               <label for="type">Type d'utilisateur <i class="bi-info-circle text-primary size-bi" data-bs-toggle="modal" data-bs-target="#userType"></i>
               </label>
               <!-- End Button trigger modal -->
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['type'].errors}" type="text" class="form-control" id="type" name="type" formControlName="type" required>
-              <div *ngIf="submitted && userForm.controls['type'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('type')?.invalid}" type="text" class="form-control" id="type" name="type" formControlName="type" required>
+              <div *ngIf="submitted && userForm.get('type')?.errors?.['required']" class="text-danger">
                 Le type d'utilisateur est obligatoire.
               </div>
             </div>
@@ -79,7 +79,7 @@
             <div class="form-group mt-4">
               <label for="password">Mot de passe <i class="bi-info-circle text-primary size-bi" data-bs-toggle="modal" data-bs-target="#userPassword"></i></label>
               <div class="input-group-merge">
-                <input [ngClass]="{'is-invalid':submitted && userForm.controls['password'].errors}" type="password" class="js-toggle-password form-control" id="password" name="password" formControlName="password"
+                <input [ngClass]="{'is-invalid':submitted && userForm.get('password')?.invalid}" type="password" class="js-toggle-password form-control" id="password" name="password" formControlName="password"
                        data-hs-toggle-password-options='{
                                      "target": [".js-toggle-password-target-1", ".js-toggle-password-target-2"],
                                      "defaultClass": "bi-eye-slash",
@@ -89,7 +89,7 @@
                 <a class="js-toggle-password-target-1 input-group-append input-group-text" href="javascript:" (click)="diplayPassword()">
                   <i class="js-toggle-password-show-icon-1 bi-eye"></i>
                 </a>
-                <div *ngIf="submitted && userForm.controls['password'].errors" class="text-danger">
+                <div *ngIf="submitted && userForm.get('password')?.errors?.['passwordValidator']" class="text-danger">
                     Le mot de passe doit comporter au moins une lettre majuscule, une lettre minuscule, un chiffre et qui comporte au moins 8 caractères composés de lettres, de chiffres et des caractères spéciaux autorisés - + _ ! ?.
                 </div>
               </div>
@@ -115,8 +115,8 @@
           <div class="col-sm-6">
             <div class="form-group mt-4">
               <label for="deliveryStreet">Numéro et nom de la rue</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['deliveryStreet'].errors}" type="text" class="form-control" id="deliveryStreet" name="deliveryStreet" formControlName="deliveryStreet" required>
-              <div *ngIf="submitted && userForm.controls['deliveryStreet'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('deliveryStreet')?.invalid}" type="text" class="form-control" id="deliveryStreet" name="deliveryStreet" formControlName="deliveryStreet" required>
+              <div *ngIf="submitted && userForm.get('deliveryStreet')?.errors?.['required']" class="text-danger">
                 Le numéro et le nom de la rue sont obligatoires.
               </div>
             </div>
@@ -125,7 +125,7 @@
           <div class="col-sm-6">
             <div class="form-group mt-4">
               <label for="deliveryAddressComplement">Complément d'adresse</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['deliveryAddressComplement'].errors}" type="text" class="form-control" id="deliveryAddressComplement" name="deliveryAddressComplement" formControlName="deliveryAddressComplement">
+              <input type="text" class="form-control" id="deliveryAddressComplement" name="deliveryAddressComplement" formControlName="deliveryAddressComplement">
             </div>
           </div>
         </div>
@@ -135,8 +135,8 @@
           <div class="col-sm-2">
             <div class="form-group mt-4">
               <label for="deliveryZipCode">Code Postal</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['deliveryZipCode'].errors}" type="text" class="form-control" id="deliveryZipCode" name="deliveryZipCode" formControlName="deliveryZipCode" required>
-              <div *ngIf="submitted && userForm.controls['deliveryZipCode'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('deliveryZipCode')?.invalid}" type="text" class="form-control" id="deliveryZipCode" name="deliveryZipCode" formControlName="deliveryZipCode" required>
+              <div *ngIf="submitted && userForm.get('deliveryZipCode')?.errors?.['required']" class="text-danger">
                 Le code postal est obligatoire.
               </div>
             </div>
@@ -145,8 +145,8 @@
           <div class="col-sm-5">
             <div class="form-group mt-4">
               <label for="deliveryCity">Ville</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['deliveryCity'].errors}" type="text" class="form-control" id="deliveryCity" name="deliveryCity" formControlName="deliveryCity" required>
-              <div *ngIf="submitted && userForm.controls['deliveryCity'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('deliveryCity')?.invalid}" type="text" class="form-control" id="deliveryCity" name="deliveryCity" formControlName="deliveryCity" required>
+              <div *ngIf="submitted && userForm.get('deliveryCity')?.errors?.['required']" class="text-danger">
                 La ville est obligatoire.
               </div>
             </div>
@@ -155,8 +155,8 @@
           <div class="col-sm-5">
             <div class="form-group mt-4">
               <label for="deliveryCountry">Pays</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['deliveryCountry'].errors}" type="text" class="form-control" id="deliveryCountry" name="deliveryCountry" formControlName="deliveryCountry" required>
-              <div *ngIf="submitted && userForm.controls['deliveryCountry'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('deliveryCountry')?.invalid}" type="text" class="form-control" id="deliveryCountry" name="deliveryCountry" formControlName="deliveryCountry" required>
+              <div *ngIf="submitted && userForm.get('deliveryCountry')?.errors?.['required']" class="text-danger">
                 Le pays est obligatoire.
               </div>
             </div>
@@ -168,8 +168,8 @@
           <div class="col-sm-6">
             <div class="form-group mt-4">
               <label for="invoiceStreet">Numéro et nom de la rue</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['invoiceStreet'].errors}" type="text" class="form-control" id="invoiceStreet" name="invoiceStreet" formControlName="invoiceStreet">
-              <div *ngIf="submitted && userForm.controls['invoiceStreet'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('invoiceStreet')?.invalid}" type="text" class="form-control" id="invoiceStreet" name="invoiceStreet" formControlName="invoiceStreet">
+              <div *ngIf="submitted && userForm.get('invoiceStreet')?.errors?.['required']" class="text-danger">
                 Le numéro et nom de la rue sont obligatoire.
               </div>
             </div>
@@ -178,7 +178,7 @@
           <div class="col-sm-6">
             <div class="form-group mt-4">
               <label for="invoiceAddressComplement">Complément d'adresse</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['invoiceAddressComplement'].errors}" type="text" class="form-control" id="invoiceAddressComplement" name="invoiceAddressComplement" formControlName="invoiceAddressComplement">
+              <input type="text" class="form-control" id="invoiceAddressComplement" name="invoiceAddressComplement" formControlName="invoiceAddressComplement">
             </div>
           </div>
         </div>
@@ -188,8 +188,8 @@
           <div class="col-sm-2">
             <div class="form-group mt-4">
               <label for="invoiceZipCode">Code postal</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['invoiceZipCode'].errors}" type="text" class="form-control" id="invoiceZipCode" name="invoiceZipCode" formControlName="invoiceZipCode">
-              <div *ngIf="submitted && userForm.controls['invoiceZipCode'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('invoiceZipCode')?.invalid}" type="text" class="form-control" id="invoiceZipCode" name="invoiceZipCode" formControlName="invoiceZipCode">
+              <div *ngIf="submitted && userForm.get('invoiceZipCode')?.errors?.['required']" class="text-danger">
                 Le code postal est obligatoire.
               </div>
             </div>
@@ -198,8 +198,8 @@
           <div class="col-sm-5">
             <div class="form-group mt-4">
               <label for="invoiceCity">Ville</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['invoiceCity'].errors}" type="text" class="form-control" id="invoiceCity" name="invoiceCity" formControlName="invoiceCity">
-              <div *ngIf="submitted && userForm.controls['invoiceCity'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('invoiceCity')?.invalid}" type="text" class="form-control" id="invoiceCity" name="invoiceCity" formControlName="invoiceCity">
+              <div *ngIf="submitted && userForm.get('invoiceCity')?.errors?.['required']" class="text-danger">
                 La ville est obligatoire.
               </div>
             </div>
@@ -208,8 +208,8 @@
           <div class="col-sm-5">
             <div class="form-group mt-4">
               <label for="invoiceCountry">Pays</label>
-              <input [ngClass]="{'is-invalid':submitted && userForm.controls['invoiceCountry'].errors}" type="text" class="form-control" id="invoiceCountry" name="invoiceCountry" formControlName="invoiceCountry">
-              <div *ngIf="submitted && userForm.controls['invoiceCountry'].errors" class="text-danger">
+              <input [ngClass]="{'is-invalid':submitted && userForm.get('invoiceCountry')?.invalid}" type="text" class="form-control" id="invoiceCountry" name="invoiceCountry" formControlName="invoiceCountry">
+              <div *ngIf="submitted && userForm.get('invoiceCountry')?.errors?.['required']" class="text-danger">
                 Le pays est obligatoire.
               </div>
             </div>
