--- a/src/app/components/admin-administration/author/author.component.html
+++ b/src/app/components/admin-administration/author/author.component.html
@@ -1,4 +1,4 @@
-<div class="container content-space-1">
+<div class="container content-space-b-4">
   <div class="d-flex justify-content-center">
     <div class="col-lg-6">
       <!-- Dropdown pour sélectionner un auteur -->
@@ -17,22 +17,22 @@
       <form (ngSubmit)="onSubmit()" class="js-validate needs-validation" novalidate id="author-form" [formGroup]="authorForm">
        <div class="form-group mt-4">
           <label for="firstname">Prénom</label>
-          <input [ngClass]="{'is-invalid':submitted && authorForm.controls['firstname'].errors}" type="text" class="form-control" id="firstname" name="firstname" formControlName="firstname" required>
-          <div *ngIf="submitted && authorForm.controls['firstname'].errors" class="text-danger">
+          <input [ngClass]="{'is-invalid':submitted && authorForm.get('firstname')?.invalid}" type="text" class="form-control" id="firstname" name="firstname" formControlName="firstname" required>
+          <div *ngIf="submitted && authorForm.get('firstname')?.errors?.['required']" class="text-danger">
             Le prénom de l'auteur est obligatoire.
           </div>
         </div>
         <div class="form-group">
           <label for="lastname">Nom</label>
-          <input [ngClass]="{'is-invalid':submitted && authorForm.controls['lastname'].errors}" type="text" class="form-control" id="lastname" name="lastname" formControlName="lastname" required>
-          <div *ngIf="submitted && authorForm.controls['lastname'].errors" class="text-danger">
+          <input [ngClass]="{'is-invalid':submitted && authorForm.get('lastname')?.invalid}" type="text" class="form-control" id="lastname" name="lastname" formControlName="lastname" required>
+          <div *ngIf="submitted && authorForm.get('lastname')?.errors?.['required']" class="text-danger">
             Le nom de l'auteur est obligatoire.
           </div>
         </div>
         <div class="form-group">
           <label for="language">Langue</label>
-          <input [ngClass]="{'is-invalid':submitted && authorForm.controls['language'].errors}" type="text" class="form-control" id="language" name="language" formControlName="language" required>
-          <div *ngIf="submitted && authorForm.controls['language'].errors" class="text-danger">
+          <input [ngClass]="{'is-invalid':submitted && authorForm.get('language')?.invalid}" type="text" class="form-control" id="language" name="language" formControlName="language" required>
+          <div *ngIf="submitted && authorForm.get('language')?.errors?.['required']" class="text-danger">
             La langue de l'auteur est obligatoire.
           </div>
         </div>
