update shopping card

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<main id="content" role="main" class="flex-grow-1 overflow-hidden mt-5">
+<main id="content" role="main" class="flex-grow-1 overflow-hidden content-space-1 mt-5">
   <div id="cart-alert" class="alert alert-danger" role="alert" style="display:none;"></div>
     <!-- Content -->
     <div class="container">
