--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -14,6 +14,13 @@
         </div>
       </ng-template>
       <ng-template #cartDisplay>
+        <div class="d-flex justify-content-center">
+          <div class="col-lg-8">
+            <div id="cart-success" class="alert alert-primary" role="alert" style="display:none;"></div>
+            <div id="cart-error" class="alert alert-danger" role="alert" style="display:none;"></div>
+          </div>
+        </div>
+
           <div class="card">
             <div class="card-header">
               <h4 class="card-header-title">Votre panier</h4>
@@ -68,8 +75,8 @@
             <!-- End Table -->
           </div>
           <div class="row">
-            <div class="col-8"></div>
-            <div class="col-4 mt-3">
+            <div class="col-md-0 col-lg-8"></div>
+            <div class="col-md-12 col-lg-4 mt-3">
               <div class="card">
                 <div class="card-header">
                   <h4 class="card-header-title">Récapitulatif</h4>
@@ -135,11 +142,6 @@
             </div>
           </div>
       </ng-template>
-
-
-
-
-
     </div>
   </div>
 </main>
